--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,11 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+                 
         </plugins>
-    </build>
+             <finalNAME>spring</finalNAME>   
+         
+         </build>
+         
 
 </project>
