--- a/kubernetes/service.yaml
+++ b/kubernetes/service.yaml
@@ -1,12 +1,24 @@
-apiVersion: v1
-kind: Service
+apiVersion: apps/v1
+kind: Deployment
 metadata:
+  creationTimestamp: null
+  labels:
+    app: myapp
   name: myapp
 spec:
+  replicas: 1
   selector:
-    app: myapp
-  ports:
-    - name: http
-      port: 8081
-      targetPort: 8080
-  type: ClusterIP
+    matchLabels:
+      app: myapp
+  strategy: {}
+  template:
+    metadata:
+      creationTimestamp: null
+      labels:
+        app: myapp
+    spec:
+      containers:
+      - image: zah007110/springboot-hello
+        name: springboot-hello
+        resources: {}
+status: {}
