--- a/kubernetes/ingress.yaml
+++ b/kubernetes/ingress.yaml
@@ -6,7 +6,7 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
-    - host: myapp.example.com
+    - host: 192.168.1.6
       http:
         paths:
           - path: /myapp
