--- a/kubernetes/ingress.yaml
+++ b/kubernetes/ingress.yaml
@@ -16,3 +16,5 @@ spec:
                 name: myapp
                 port:
                   name: http
+            port:
+            targetPort: 8081
