--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: apps/v1
 kind: Deployment 
 metadata:
@@ -21,4 +22,16 @@ spec:
           ports:
             - containerPort: 8082 
 
-          
+---        
+apiVersion: v1 
+kind: Service 
+metadata: 
+  name: springboot-k8s-svc
+spec:
+  selector:
+    app: spring-boot-k8s
+  ports:
+    - protocol: "TCP"
+      port: 8082
+      targetPort: 8082
+  type: NodePort 
